8298129: Let checkpoint event sizes grow beyond u4 limit

Reviewed-by: phh
Backport-of: ea108f504ccb63fc9651e804e3bbba1c108dcead